objects/PrivateProducts__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>PrivateProduct1__c</fullName>
        <label>PrivateProduct1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateProduct2__c</fullName>
        <label>PrivateProduct2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateProduct3__c</fullName>
        <label>PrivateProduct3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PrivateProducts</label>
</CustomObject>